# Emyn

./: .gitignore  ExportOptions.developer-id.plist  Package.swift  README.md  release.sh  sign.sh  signing.markdown
platform-macos/: Cargo.toml
platform-macos/scripts/: build-xcframework.sh  remove-xcframework-from-history.sh
platform-macos/src/: capture.rs  capture_session.rs  event_tap.rs  lib.rs  ntsc_effect.rs
platform-macos/src/ax/: mod.rs
platform-macos/src/input/: skylight.rs
platform-macos/swift/PlatformMacOSKit/: Package.swift
platform-macos/swift/PlatformMacOSKit/.build/: build.db  plugin-tools.yaml  workspace-state.json
platform-macos/swift/PlatformMacOSKit/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
platform-macos/swift/PlatformMacOSKit/.build/arm64-apple-macosx/debug/ModuleCache/: CoreFoundation-XSIPWMR9NELJ.swiftmodule  CoreGraphics-3F9IUOCTM02KX.swiftmodule  Dispatch-1RK565VN1TC6Y.swiftmodule  Foundation-2R4HFUR4BM1YT.swiftmodule  IOKit-1MEE1BYX0SHKN.swiftmodule  ObjectiveC-34VMXRTQCQJCR.swiftmodule  XPC-KKBYLCSFBBXN.swiftmodule
platform-macos/swift/PlatformMacOSKit/.build/arm64-apple-macosx/debug/ModuleCache/2GIWIW70OF9FU/: CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _DarwinFoundation1-2YSBQADOLX02V.pcm  _DarwinFoundation2-3J4ZFA06I5V1P.pcm  _DarwinFoundation3-2NSGASPTSNBVQ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  launch-3T3BU4MASLMUM.pcm  libDER-26DYHF6GC6WWA.pcm  libkern-2KQ0X67RTM1JF.pcm  (+6 more)
platform-macos/swift/PlatformMacOSKit/.build/arm64-apple-macosx/debug/Modules/: PlatformMacOSKit.swiftdoc  PlatformMacOSKit.swiftmodule  PlatformMacOSKit.swiftsourceinfo
platform-macos/swift/PlatformMacOSKit/.build/arm64-apple-macosx/debug/PlatformMacOSKit.build/: PlatformMacOSKit.emit-module.d  WindowCaptureSession.d  WindowCaptureSession.swiftdeps  master.priors  output-file-map.json  platform_macos.d  platform_macos.swiftdeps  sources
platform-macos/swift/PlatformMacOSKit/Sources/PlatformMacOSKit/: NtscEffectInPlace.swift  WindowCaptureSession.swift  platform_macos.swift
(+112 files in other folders)
