[package]
name = "platform-macos"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib is required for uniffi to generate a dynamic library that
# uniffi-bindgen can introspect to emit Swift/Kotlin bindings.
# staticlib is what scripts/build-xcframework.sh embeds into the XCFramework.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# uniffi: proc-macro approach — no UDL file needed.
# Runtime crate provides the proc-macros; setup_scaffolding!() in lib.rs
# registers the FFI entry points the generated bindings call into.
uniffi = "0.28"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
image = "0.25"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
# Insertion-ordered map for the keyed per-session cursor render collection.
indexmap = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS system bindings
core-foundation = "0.10"
core-graphics = { version = "0.24", features = ["highsierra", "elcapitan"] }
foreign-types = "0.5"
libc = "0.2"
block2 = "0.5"
# objc2 and its AppKit/CoreFoundation bindings
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSArray", "NSString", "NSDictionary", "NSRunLoop",
    "NSThread", "NSObject", "NSValue",
    "NSAppleEventDescriptor", "NSNotification", "NSOperation",
    "NSURL", "NSDate", "NSError",
    "block2", "libc",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication", "NSWindow", "NSScreen", "NSColor",
    "NSEvent", "NSRunningApplication", "NSWorkspace",
    "NSView", "NSGraphicsContext", "NSResponder",
    "NSImage", "NSImageView", "NSTextField", "NSControl", "NSCell",
    "block2", "libc",
] }

# QuartzCore for CALayer
objc2-quartz-core = { version = "0.2", features = ["CALayer"] }

# tiny-skia for cursor rendering
tiny-skia = { version = "0.11", default-features = false, features = ["std"] }

# WebSocket CDP client (used by browser/cdp_client.rs for the page tool)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[features]
# Pulls in uniffi's clap-based CLI (and the uniffi-bindgen-swift binary
# below) without adding that weight to the normal library build.
uniffi-bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"
required-features = ["uniffi-bindgen"]
